<resources>
    <string name="app_name">Movie Mood</string>

    <!-- Options Screen -->
    <string name="options_watching_with">I am watching with…</string>
    <string name="options_myself">Myself</string>
    <string name="options_family">Family</string>
    <string name="options_friends">Friends</string>
    <string name="options_other">Significant Other</string>

    <!-- Movie Listing Screen -->
    <string name="movie_title">Title</string>
    <string name="movie_rating">5.0</string>
    <string name="movie_date">2019–06–13</string>
    <string name="movie_poster_description">Movie poster</string>
    <string name="duration">Duration:</string>
    <string name="movie_duration">\?</string>
    <string name="language">Language:</string>
    <string name="movie_language">English</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
        qui officia deserunt mollit anim id est laborum.</string>
</resources>