<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="49dp"
        android:layout_width="280dp"
        android:layout_height="88dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/headerlogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="48dp"
        android:text="@string/options_watching_with"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Material.Display2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/option_myself"
        style="@style/optionCards">

        <TextView
            style="@style/optionCardsText"
            android:text="@string/options_myself" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/option_family"
        style="@style/optionCards">

        <TextView
            style="@style/optionCardsText"
            android:text="@string/options_family" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/option_friends"
        style="@style/optionCards">

        <TextView
            style="@style/optionCardsText"
            android:text="@string/options_friends" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/option_other"
        style="@style/optionCards">

        <TextView
            style="@style/optionCardsText"
            android:text="@string/options_other" />

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>